[gd_scene load_steps=9 format=3 uid="uid://cotcqak8igk5i"]

[ext_resource type="Texture2D" uid="uid://dqqkrter0tdfw" path="res://menu/cutscenes/intro.png" id="1_4xx8d"]
[ext_resource type="Script" path="res://menu/cutscenes/cutscene_intro.gd" id="1_o5cr0"]
[ext_resource type="Theme" uid="uid://b8ud2usk1rgfa" path="res://menu/theme.tres" id="3_lxwfi"]
[ext_resource type="AudioStream" uid="uid://pp4a60c0yr6a" path="res://assets/audio/voicelines/news_report_full.ogg" id="4_3iobu"]
[ext_resource type="Texture2D" uid="uid://xmnhh3y0t8ch" path="res://game/characters/player/player_spritesheet.png" id="5_5x6p0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_s53yj"]
noise_type = 0
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gsajn"]
width = 278
height = 154
noise = SubResource("FastNoiseLite_s53yj")

[sub_resource type="AtlasTexture" id="AtlasTexture_0lgs2"]
atlas = ExtResource("5_5x6p0")
region = Rect2(0, 64, 32, 64)
filter_clip = true

[node name="CutsceneIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5cr0")
next_scene = "res://game/levels/level_1/level_1.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4xx8d")

[node name="2ndPart" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Timer" type="Timer" parent="2ndPart"]
unique_name_in_owner = true
wait_time = 33.5
one_shot = true

[node name="Noise" type="TextureRect" parent="2ndPart"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 149.0
offset_top = 49.0
offset_right = 427.0
offset_bottom = 203.0
texture = SubResource("NoiseTexture2D_gsajn")

[node name="Player" type="TextureRect" parent="2ndPart"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 308.0
offset_top = 320.0
offset_right = 348.0
offset_bottom = 384.0
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_0lgs2")

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -42.0
offset_right = -14.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_lxwfi")
text = "Weiter"

[node name="snd_news" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_3iobu")

[connection signal="timeout" from="2ndPart/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="finished" from="snd_news" to="." method="_on_snd_news_finished"]
